# CI2024_project-work

./: .gitignore  README.md  Results.md  ResultsEven.md  ResultsOdd.md  demo-gxgp.ipynb  gx_utils.py  main.ipynb  main.py  pyproject.toml  solution.py  symreg.ipynb  symreg_user.ipynb
data/: problem_0.npz
gxgp/: __init__.py  draw.py  gp_common.py  gp_tree.py  node.py  utils.py
results/: hyperparameter_results_20241222_121500.json  hyperparameter_results_20241222_163155.json  hyperparameter_results_20241222_163606.json  hyperparameter_results_20241222_163642.toml
results/problem_3/: best_solution.txt  continuous_runs_20241223_213719.txt  results_20241223_201745.txt  results_20241223_202107.txt  results_20241223_202353.txt  results_20241223_211847.txt  results_20241223_230018.txt
results/problem_5/: continuous_runs_20241223_213736.txt  results_20241224_071455.txt
results/problem_7/: best_solution.txt  continuous_runs_20241223_213753.txt  results_20241223_200435.txt  results_20241223_200542.txt  results_20241223_200723.txt  results_20241223_200914.txt  results_20241223_201045.txt  results_20241223_201335.txt
src/: hyperparameter_optimization.py  looping.py  main.ipynb  main.py  test.py
src/symb_regression/: base.py
src/symb_regression/config/: settings.py
src/symb_regression/core/: genetic_programming.py  tree.py
src/symb_regression/operators/: __init__.py  definitions.py  mutation.py
symb_regression/: __init__.py  base.py
symb_regression/config/: __init__.py  settings.py
symb_regression/core/: __init__.py  genetic_programming.py  tree.py
symb_regression/operators/: __init__.py  crossover.py  definitions.py  mutation.py
symb_regression/utils/: __init__.py  data_handler.py  logging_config.py  metrics.py  plotting.py
(+6 files in other folders)
