[tool.poetry]
name = "ci-project"
version = "0.1.0"
description = ""
authors = ["Your Name"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
icecream = "^2.1.3"
jupyter = "^1.1.1"
matplotlib = "^3.9.3"
networkx = "^3.4.2"
numpy = "^2.1.3"
scipy = "^1.14.1"
tqdm = "^4.67.1"
pydot = "^3.0.3"
gplearn = "^0.4.2"
graphviz = "^0.20.3"

[tool.poetry.extras]
plot = ["matplotlib", "networkx", "pydot"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
mypy = "^1.13.0"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["icecream.*", "networkx.*"]
