[tool.poetry]
    name = "ci-project"
    version = "0.1.0"
    description = "Computational Intelligence Project"
    authors = ["Nicolò Taormina"]
    license = "MIT"
    readme = "README.md"
    package-mode = false

    [tool.poetry.dependencies]
        python = "^3.12"
        icecream = "^2.1.3"
        matplotlib = "^3.9.3"
        networkx = "^3.4.2"
        numpy = "^2.2.0"
        scipy = "^1.14.1"
        tqdm = "^4.67.1"
        rich = "^13.9.4"
        joblib = "^1.4.2"
        toml = "^0.10.2"

    [tool.poetry.extras]
        plot = ["matplotlib", "networkx", "pydot"]

    [tool.poetry.group.dev.dependencies]
        mypy = "^1.13.0"
        ruff = "^0.8.2"

[build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
    ignore_missing_imports = true
    module = ["icecream.*", "networkx.*", "tqdm.*", "joblib.*", "toml.*"]
